<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip">

        <TextView android:id="@id/textView4"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:layout_marginBottom="10.0dip"
            android:text="@string/code_conduct_title" />
        <TextView android:id="@id/textView5"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:text="@string/code_conduct1" />
        <TextView android:id="@id/textView6"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:text="@string/code_conduct2" />
        <TextView android:id="@id/textView7"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:text="@string/code_conduct3" />
        <TextView android:id="@id/textView8"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:text="@string/code_conduct4" />
        <TextView android:id="@id/textView9"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:text="@string/code_conduct5" />
        <TextView android:id="@id/textView10"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:text="@string/code_conduct6" />
        <TextView android:id="@id/textView11"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:text="@string/code_conduct7" />

    </LinearLayout>

</ScrollView>
