<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="16.0dip">

    <TextView
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:autoLink="all"
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text1" />
    <TextView
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text2" />
    <TextView
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:autoLink="all"
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text3" />
    <TextView
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text4" />

</LinearLayout>
