<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:agendaCalendar="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="10.0dip">

    <TextView android:id="@id/textView2"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:layout_marginBottom="10.0dip"
        android:text="@string/about_title" />
    <TextView android:id="@id/textView3"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_content" />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_content2" />
        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/about_content3" />

    </LinearLayout>

</LinearLayout>
