<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@id/textView2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:layout_marginBottom="10.0dip"
            android:text="@string/about_title" />
        <TextView android:id="@id/textView3"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_content" />

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_content2" />
            <TextView android:id="@id/code_of_conduct"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="@string/about_content3" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
