<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/holder"
    android:background="@color/transparency"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView android:id="@id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sotm" />
    <View android:id="@id/firstDivisor"
        android:background="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginBottom="10.0dip"
        android:layout_below="@id/imageView2" />
    <TextView android:id="@id/sotmTitle"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:text="@string/sotm_title"
        android:layout_below="@id/firstDivisor"
        android:layout_centerHorizontal="true" />
    <TextView android:id="@id/sotmTitle2"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sotm_title2"
        android:layout_below="@id/sotmTitle"
        android:layout_centerHorizontal="true" />
    <View android:id="@id/finalDivisor"
        android:background="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:layout_margin="10.0dip"
        android:layout_below="@id/sotmTitle2" />
    <TextView android:id="@id/sotmDate"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sotm_date"
        android:layout_below="@id/finalDivisor"
        android:layout_centerHorizontal="true" />
    <Button android:id="@id/btnProgram"
        android:textColor="@color/colorAccent"
        android:background="@drawable/roundedbuttons"
        android:padding="10.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:text="Program"
        android:layout_below="@id/sotmDate"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
